Added weighted graphs
